src/components/VoteCard/VoteCard.module.scss
.card {
  background-color: #f7b911;
  color: black;
  width: 15rem;
  height: 10rem;
  border-radius: 10px;
  justify-self: center;
  cursor: pointer;

  .card-content-wrapper {
    display: grid;
    justify-items: center;
    align-items: center;
    grid-template-rows: 1fr 1fr 1fr;
    // margin: 1rem;
    height: 100%;
    width: 100%;
  }

  &.selected {
    border: 3px solid black;
  }

  &.correct {
    background-color: #00a651;
    color: white;
  }

  &.wrong {
    background-color: #ee490e;
    color: white;
  }

  &.inactive {
    pointer-events: none;
    cursor: default;
  }

  .avatar {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    grid-row: 1;
    align-self: self-end;
  }

  .answer {
    font-size: 1.5rem;
    font-weight: 600;
    margin: 0;
    grid-row: 2;
  }

  .votes {
    font-size: 0.8rem;
    margin: 0;
    grid-row: 3;
  }
}

@media (max-width: 440px) {
  .card {
    width: 90%;
    height: 100%;
    min-height: 3rem;

    .card-content-wrapper {
      grid-template-columns: fit-content 1fr fit-content;
      grid-template-rows: 1fr;
    }

    .avatar {
      width: 30px;
      height: 30px;
      grid-row: 1;
      grid-column: 1;
      align-self: center;
    }

    .answer {
      font-size: 1rem;
      grid-row: 1;
      grid-column: 2;
      text-align: center;
    }

    .votes {
      font-size: 0.6rem;
      grid-row: 1;
      grid-column: 3;
    }
  }

  .correct-answer-text {
    font-size: 0.6rem;
    width: 3rem;
  }
}

